<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hello10419667</string>
    <string name="hello_world">Hello world!</string>
    <string name="Hello_cs">Hello, Android!</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">Change color</string>
    <string name="edit_message">Enter some text</string>
    <string name="edit_button">Edit the text</string>
    <string name="fullView_button">Click for text in Full Screen</string>
    <string name="title_activity_display_message">My Message</string>


</resources>
