<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeeeee"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helloworld.MainActivity" >

    <TextView
        android:id="@+id/Hello_cs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hello_cs"
        android:textSize="@dimen/abc_action_bar_title_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
        <EditText
            android:id="@+id/edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_message" />

        <Button
            android:id="@+id/send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="editText"
            android:text="@string/edit_button" />
    
    </LinearLayout>
    
    <Button
        android:id="@+id/color_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="changeColor"
        android:text="@string/button_text" />
        
    <Button
        android:id="@+id/full_screen_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="fullView"
        android:text="@string/fullView_button" />
    
</LinearLayout>
